2014-08-08  Daiki Ueno  <ueno@gnu.org>

	Fix parallel make race when generating unistring/cdefs.h.
	Trivial fix by Richard Purdie in:
	http://lists.openembedded.org/pipermail/openembedded-core/2012-April/059850.html
	* lib/Makefile.am (unistring/cdefs.h): Add $(UNUSED_PARAMETER_H)
	to prerequisites.
	Reported by Ludovic Courtès.

2013-01-19  Bruno Haible  <bruno@clisp.org>

	Fix license headers to be LGPL.
	* lib/stdbool.mini.h: Change license to LGPLv3+.
	* woe32dll/export.h: Likewise.
	* woe32dll/unistring-exports.c: Likewise.
	Reported by Ryan Schmidt.

2012-04-29  Bruno Haible  <bruno@clisp.org>

	Allow use of autoconf-2.69 and automake-1.12.
	* autogen.sh: Update comments.

2012-01-15  Bruno Haible  <bruno@clisp.org>

	Support for MSVC 9.
	* woe32dll/export.h (VARIABLE): Define to empty if not using GCC.

2011-01-28  Bruno Haible  <bruno@clisp.org>

	Add a comment.
	* woe32dll/export.h: Add a reference to the woe32dll writeup.

2011-10-18  Bruno Haible  <bruno@clisp.org>

	* m4/libtool.m4: Update from libtool-2.4.2, with modifications.
	2009-04-23  Bruno Haible  <bruno@clisp.org>
		Fix recognition of "nm" command.
		* m4/libtool.m4 (LT_PATH_NM): Try "nm" program also when
		compiling for mingw in a cygwin environment.
	2008-04-06  Bruno Haible  <bruno@clisp.org>
		* m4/libtool.m4 (LT_INIT): When setting LIBTOOL, use
		CONFIG_SHELL; don't assume that the Makefile.in will set SHELL
		to ${CONFIG_SHELL}.
	* m4/ltoptions.m4: Likewise.
	* m4/ltversion.m4: Likewise.
	* build-aux/ltmain.sh: Likewise.

2011-03-29  Bruno Haible  <bruno@clisp.org>

	Add grapheme cluster break functions.
	* autogen.sh (GNULIB_MODULES): Add unigbrk/*.
	* gnulib-local/lib/unigbrk.in.h.diff: New file.
	* gnulib-local/Makefile.am (EXTRA_DIST): Add lib/unigbrk.in.h.diff.
	* lib/Makefile.am (nobase_include_HEADERS, HEADERS_WITH_EXTERNS): Add
	unigbrk.h.
	* doc/Makefile.am (libunistring_TEXINFOS): Move unigbrk.texi before
	uniwbrk.texi.